Fixed issue where image spilled out of middle-content on the about page

--- a/styles/home.css
+++ b/styles/home.css
@@ -204,6 +204,9 @@ p {
         font-size: 2.5em;
     }
     .middle-content {
+        box-sizing: border-box;
+        width:100%;
+        display: inline-block;
         background: #f5f5f5;
         border-radius: 20px;
     }
